--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,6 +1,6 @@
-task-container {
+.task-container {
   background-color: #444;
-  margin: 8px 0px;
+  margin: 8px 0;
   padding: 15px 20px;
   display: flex;
   border-radius: 5px;
